--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,6 +1,11 @@
 #container {
-
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 #contents{
+    width: 100%;
     margin-bottom: 200px;
+    display: flex;
+    justify-content: center;
 }
