--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -9,3 +9,15 @@
     display: flex;
     justify-content: center;
 }
+
+.w100p{
+    width: 100%;
+}
+
+.h100p{
+    height: 100%;
+}
+
+.w150px{
+    width: 180px;
+}
