--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,7 @@
 .bg-img-sky{
     background-image: url("../image/bg-sky.jpg");
 }
+
+.logo-img{
+    background-image: url("../image/logo-main.png");
+}
