--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,3 +5,114 @@
 .logo-img{
     background-image: url("../image/logo-main.png");
 }
+
+.tab-list{
+    padding: 0;
+    justify-content: flex-start;
+}
+
+.tab-list>button{
+    padding: 0.5rem !important;
+    min-width: 6rem;
+    margin-inline: 3rem;
+    margin-left: 3rem !important;
+}
+
+.tab-list .active{
+    color: rgb(8, 145, 178);
+}
+
+.tab-container{
+    margin-inline : 3rem;
+}
+
+.tab-title{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.tab-content{
+    margin-top: 1rem;
+}
+
+/* 드로윙 */
+.canvas{
+    width: 800px;
+    height: 500px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+.controls{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.controls .controls_btns{
+    margin-bottom: 30px;
+}
+
+.controls_btns button{
+    all: unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 0px;
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
+}
+
+.controls_btns button:active{
+    transform: scale(0.98);
+}
+
+.controls .controls_colors{
+    display: flex;
+}
+
+.controls_colors .controls_color{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.controls .controls_range{
+    margin-bottom: 30px;
+}
+
+.controls_colors .controls_color.bg-black{
+    background-color: #2c2c2c;
+}
+.controls_colors .controls_color.bg-white{
+    background-color:white;
+}
+.controls_colors .controls_color.bg-red{
+    background-color: #FF3B30;
+}
+.controls_colors .controls_color.bg-orange{
+    background-color: #ff9500;
+}
+.controls_colors .controls_color.bg-green{
+    background-color: #4cd963;
+}
+.controls_colors .controls_color.bg-sky{
+    background-color: #5ac8fa;
+}
+.controls_colors .controls_color.bg-blue{
+    background-color: #0579ff;
+}
+.controls_colors .controls_color.bg-navy{
+    background-color: #5856d6;
+}
