--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -44,9 +44,10 @@
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 0.5px solid rgba(0, 0, 0, 0.08);
 }
 .controls{
-    margin-top: 80px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,18 +79,19 @@
 
 .controls .controls_colors{
     display: flex;
+    margin-bottom: 1rem;
 }
 
 .controls_colors .controls_color{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 .controls .controls_range{
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .controls_colors .controls_color.bg-black{
