--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,44 +1,44 @@
-.bg-img-sky{
+.bg-img-sky {
     background-image: url("../image/bg-sky.jpg");
 }
 
-.logo-img{
+.logo-img {
     background-image: url("../image/logo-main.png");
 }
 
-.tab-list{
+.tab-list {
     padding: 0;
     justify-content: flex-start;
 }
 
-.tab-list>button{
+.tab-list>button {
     padding: 0.5rem !important;
     min-width: 6rem;
     margin-inline: 3rem;
     margin-left: 3rem !important;
 }
 
-.tab-list .active{
+.tab-list .active {
     color: rgb(8, 145, 178);
 }
 
-.tab-container{
-    margin-inline : 3rem;
+.tab-container {
+    margin-inline: 3rem;
 }
 
-.tab-title{
+.tab-title {
     display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
     font-weight: 500;
 }
 
-.tab-content{
+.tab-content {
     margin-top: 1rem;
 }
 
 /* 드로윙 */
-.canvas{
+.canvas {
     width: 800px;
     height: 500px;
     background-color: white;
@@ -46,18 +46,19 @@
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     border: 0.5px solid rgba(0, 0, 0, 0.08);
 }
-.controls{
+
+.controls {
     margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.controls .controls_btns{
+.controls .controls_btns {
     margin-bottom: 30px;
 }
 
-.controls_btns button{
+.controls_btns button {
     all: unset;
     cursor: pointer;
     background-color: white;
@@ -73,48 +74,64 @@
     font-size: 12px;
 }
 
-.controls_btns button:active{
+.controls_btns button:active {
     transform: scale(0.98);
 }
 
-.controls .controls_colors{
+.controls .controls_colors {
     display: flex;
     margin-bottom: 1rem;
 }
 
-.controls_colors .controls_color{
+.controls_colors .controls_color {
     width: 30px;
     height: 30px;
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    margin-inline: 10px;
 }
 
-.controls .controls_range{
+.controls_colors .controls_color.active-on {
+    border: 5px double rgb(104, 164, 238);
+}
+
+.controls .controls_range {
     /* margin-bottom: 30px; */
 }
 
-.controls_colors .controls_color.bg-black{
+.controls_colors .controls_color.bg-black {
     background-color: #2c2c2c;
 }
-.controls_colors .controls_color.bg-white{
-    background-color:white;
+
+.controls_colors .controls_color.bg-white {
+    background-color: white;
 }
-.controls_colors .controls_color.bg-red{
+
+.controls_colors .controls_color.bg-red {
     background-color: #FF3B30;
 }
-.controls_colors .controls_color.bg-orange{
+
+.controls_colors .controls_color.bg-orange {
     background-color: #ff9500;
 }
-.controls_colors .controls_color.bg-green{
+
+.controls_colors .controls_color.bg-green {
     background-color: #4cd963;
 }
-.controls_colors .controls_color.bg-sky{
+
+.controls_colors .controls_color.bg-sky {
     background-color: #5ac8fa;
 }
-.controls_colors .controls_color.bg-blue{
+
+.controls_colors .controls_color.bg-blue {
     background-color: #0579ff;
 }
-.controls_colors .controls_color.bg-navy{
+
+.controls_colors .controls_color.bg-navy {
     background-color: #5856d6;
+}
+
+.jsMode .active {
+    background-color: rgb(8, 145, 178);
 }
