마우스 커서 모양 수정

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -47,6 +47,14 @@
     border: 0.5px solid rgba(0, 0, 0, 0.08);
 }
 
+.canvas.paint {
+    cursor: pointer;
+}
+
+.canvas.fill {
+    cursor: grab;
+}
+
 .controls {
     margin-bottom: 30px;
     display: flex;
