--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,8 +39,8 @@
 
 /* 드로윙 */
 .canvas {
-    width: 1000;
-    height: 500px;
+    width: 1200px;
+    height: 800px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
@@ -143,6 +143,11 @@
 
 .jsMode .active {
     background-color: rgb(8, 145, 178);
+}
+
+.canvas-con {
+    display: flex;
+    justify-content: center;
 }
 
 /* 스킬 */
