--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -30,3 +30,46 @@
 .uncursor {
     cursor: default !important;
 }
+
+/* Record */
+.record-wrapper {
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.video-container {
+    display: flex !important;
+    width: 1050px;
+    padding: 1rem;
+    justify-content: space-around;
+    margin-block: 50px;
+}
+
+.video-item>h2 {
+    text-align: center;
+}
+
+.video-item>video {
+    border: 1px solid #ccc;
+    width: 400px;
+    height: 300px;
+}
+
+.video-btn {
+    border: none;
+    font-size: 14px;
+    background: #ccc;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.video-info {
+    font-size: 12px;
+    color: gray;
+    display: contents;
+}
